syntax = "proto3";

package Seraphim.Types;

/*
 * Common types used in messages
 */

message Point2D {
  int32 x = 1;
  int32 y = 2;
}

message PointSet2D {
  repeated Point2D points = 1;
}

message Region2D {
  int32 x = 1;
  int32 y = 2;
  int32 w = 3;
  int32 h = 4;
}

message Image2D {
  uint32 width = 1;
  uint32 height = 2;
  uint32 stride = 3;
  uint32 fourcc = 4;
  bytes data = 5;
}
